Subeiendo mi pagina sin estar para nada terminada a git hub

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <br>
                     <p>Exelente calidad a buen precio</p>
                 </article>
-                <a href="#">Ver el producto</a>
+                <a href="./html/Audifonos.html">Ver el producto</a>
                 <!-- <iframe  class="insercion-Carrito-Compras" src="html/CarritoCompras.html"></iframe> -->
             </div>
 
