Seccion de audifonos lista

--- a/html/instrucciones-compra.html
+++ b/html/instrucciones-compra.html
@@ -1,10 +1,11 @@
 <link rel="stylesheet" href="../css/intrucciones-compra.css">
 <section class="Datos-compra-producto">
-        <h3>Como comprar</h3>
-        <ul>
-            <li>Haga click en boton comprar</li>
-            <li>Se redigira automaticamente a un enlace de wallapop, alli prodra comunicarse con nosotros o comprar el producto</li>
-            <li>podra coordinar el lugar de entrega, y la fecha y la hora de la misma.</li>
-            <li> se debe tener en cuenta que los productos se venden unica y exclusivamente en Madrid</li>
-        </ul>
+    <h3>Cómo comprar</h3>
+    <ul>
+        <li>Haz clic en el botón "Comprar"</li>
+        <li>Se te redirigirá automáticamente a un enlace de Wallapop, donde podrás comunicarte con nosotros y comprar el producto</li>
+        <li>Podrás coordinar el lugar de entrega, y la fecha y la hora de la misma.</li>
+        <li>Se debe tener en cuenta que los productos se venden única y exclusivamente en Madrid</li>
+    </ul>
+
 </section>
