--- a/html/Encabezado.html
+++ b/html/Encabezado.html
@@ -44,10 +44,10 @@ header{
     flex-direction: row;
     width: 100%;
     height: 70px;
-    background-color: #0A111F;
+    background-color: #002333; ;
 
-    padding-top: 10px;
-    padding-bottom: 10px; 
+    padding-top: 20px;
+    padding-bottom: 20px; 
 }
 
 .logo{
