Se termino la seccion de pulceras

--- a/html/Audifonos.html
+++ b/html/Audifonos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audifonos</title>
     <link rel="stylesheet" href="../css/Audifonos.css">
+    <link rel="stylesheet" href="../css/estilosPrincipalesProductos.css">
     <link rel="stylesheet" href="../css/estandar-article.css">
     <link rel="stylesheet" href="../css/animaciones.css">
     <link rel="stylesheet" href="../css/carrusels.css">
@@ -29,19 +30,6 @@
             <button class="carousel-button prev-button" onclick="prevImage()">&#8249;</button>
             <button class="carousel-button next-button" onclick="nextImage()">&#8250;</button>
           </div>
-
-
-        <!-- <section class="imagenesProductosPrincipales">
-            <figure class="imagenes-productos">
-                <a href="https://i.ibb.co/qRcDhXW/i3454682466.png"><img class="img-producto" id="img-carrusel-1" src="https://i.ibb.co/qRcDhXW/i3454682466.png" alt="Imgen del producto"></a>
-
-                <a href="https://i.ibb.co/WKXpw12/i3450773596.png"><img class="img-producto" id="img-carrusel-2" src="https://i.ibb.co/WKXpw12/i3450773596.png" alt="Imgen del producto"></a>
-
-                <a href="https://i.ibb.co/48d7yht/Lenovo-LP5-Review-New-Budget-Headphones-Under-15-18.png"><img class="img-producto" id="img-carrusel-3" src="https://i.ibb.co/48d7yht/Lenovo-LP5-Review-New-Budget-Headphones-Under-15-18.png" alt="Imgen del producto"></a>
-
-                <a href="https://i.ibb.co/Yjg4sYk/Lenovo-LP5-an-lisis-auriculares-econ-micos-Bluetooth-5-1-Google-Chrome-02-09-2023-12-17-16.jpg"><img class="img-producto" id="img-carrusel-4" src="https://i.ibb.co/Yjg4sYk/Lenovo-LP5-an-lisis-auriculares-econ-micos-Bluetooth-5-1-Google-Chrome-02-09-2023-12-17-16.jpg" alt="Imgen del producto"></a>
-            </figure>
-        </section> -->
 
         <!--Boton de comprar producto-->
         
