--- a/html/Encabezado.html
+++ b/html/Encabezado.html
@@ -9,10 +9,10 @@
     <header class="container--datos-header-img">
         <section class="header--encabezado">
             <span class="logo" id="encabezado--logo"></span>
-            <div class="container--carrito-Compras">
+            <!-- <div class="container--carrito-Compras">
                 <span class="carrito-compras-img"></span>
-                <!-- <p id="numero-articulos--carrito">15</p> -->
-            </div>
+                 <p id="numero-articulos--carrito">15</p> 
+            </div> -->
         </section>
     </body>
 </header>
