Subiendo la seccion de anillos

--- a/html/Gemelos.html
+++ b/html/Gemelos.html
@@ -23,7 +23,7 @@
 
                 <img class="carousel-image active" alt="Imgen del producto" src="https://i.ibb.co/g7zPyD1/IMG-20230825-0015-min.jpg">
 
-                <img class="carousel-image active" alt="Imgen del producto" src="https://i.ibb.co/njXZTLD/IMG-20230817-121954-1-min.jpg">jpg">                
+                <img class="carousel-image active" alt="Imgen del producto" src="https://i.ibb.co/njXZTLD/IMG-20230817-121954-1-min.jpg">             
                 
                 <img class="carousel-image active" alt="Imgen del producto" src="https://i.ibb.co/PtkQTv7/IMG-20230817-122004-1-min.jpg">
 
@@ -65,7 +65,7 @@
         
         <aside>
             <div class="contenedor-boton-desplazamiento">
-                <a class="boton-comprar Efecto-pulse" href="">Comprar</a>
+                <a class="boton-comprar Efecto-pulse" href="https://es.wallapop.com/item/gemelos-926623017">Comprar</a>
             </div>
         </aside>
     </main>
