--- a/html/Pulseras.html
+++ b/html/Pulseras.html
@@ -65,7 +65,7 @@
         
         <aside>
             <div class="contenedor-boton-desplazamiento">
-                <a class="boton-comprar Efecto-pulse" href="">Comprar</a>
+                <a class="boton-comprar Efecto-pulse" href="https://es.wallapop.com/item/pulseras-unisex-de-cuero-926551391">Comprar</a>
             </div>
         </aside>
     </main>
