--- a/index.html
+++ b/index.html
@@ -83,11 +83,23 @@
                 <a href="./html/Gemelos.html">Ver el producto</a>
                 <!-- <iframe class="insercion-Carrito-Compras" src="html/CarritoCompras.html"></iframe> -->
             </div>
+
+            <div class="articles bisuteria">
+                <img src="https://i.ibb.co/N996h60/IMG-20230817-120618-removebg-preview.jpg" alt="productos">
+                <article>
+                    <h3>Anillos</h3>
+                    <br>
+                    <p class="precio">3 €</p>
+                </article>
+                <a href="./html/Anillos.html">Ver el producto</a>
+                <!-- <iframe class="insercion-Carrito-Compras" src="html/CarritoCompras.html"></iframe> -->
+            </div>
         
         
         </section>
 
         <section class="container--informacion-web">
+            <h2>¿Quienes somos?</h2>
             <article>
                 Somos una tienda pequeña pero con una gran variedad de productos en constante crecimiento. Queremos distinguirnos por la calidad y el precio de nuestros productos, ofreciendo siempre lo mejor a nuestros clientes. En nuestra tienda online podrás encontrar desde artículos de electrónica y accesorios muy lindos para ti o para darle a esa persona especial. Además, a través de las plataformas de compra podrás contactar  con nosotros para hacerte entrega del producto. No lo dudes más y visita nuestras redes sociales para enterarte del resto de nuestros productos, donde encontrarás eso que buscas al mejor precio. Somos tu tienda de confianza y queremos que disfrutes de una experiencia de compra única e inolvidable.
             </article>
