--- a/html/Anillos.html
+++ b/html/Anillos.html
@@ -55,7 +55,7 @@
             Cada anillo está hecho de metal y tiene una cúpula de cristal redonda en la parte superior. Dentro de la cúpula, hay una imagen que representa un lugar o un símbolo. Puedes elegir entre varios diseños, como la Torre Eiffel de París, un pájaro en una rama o una abeja en un panal. Estas imágenes tienen diferentes tonos y colores, que crean un efecto vintage y elegante.
         </article>
 
-        <iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe>
+        <!--<iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe> -->
         
         <iframe class="instrucciones-compra" src="../html/instrucciones-compra.html"></iframe>
         
