--- a/html/AnillosGrandes.html
+++ b/html/AnillosGrandes.html
@@ -56,7 +56,7 @@
             Cada anillo está hecho de metal y tiene una cúpula de cristal redonda en la parte superior.
         </article>
 
-        <iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe>
+        <!--<iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe> -->
         
         <iframe class="instrucciones-compra" src="../html/instrucciones-compra.html"></iframe>
         
@@ -68,4 +68,4 @@
     </main>
 </body>
 <script src="../JS/Carrusel.js"></script>
-</html>
+</html>  
