--- a/html/Gemelos.html
+++ b/html/Gemelos.html
@@ -59,7 +59,7 @@
             Tenemos una gran variedad de diseños para que elijas el que más te guste y se adapte a tu personalidad. Son ideales para cualquier ocasión, ya sea una reunión de trabajo, una boda, una cena romántica o simplemente para lucirlos en tu día a día. Los gemelos son de alta calidad y durabilidad. 
         </article>
 
-        <iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe>
+        <!--<iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe> -->
         
         <iframe class="instrucciones-compra" src="../html/instrucciones-compra.html"></iframe>
         
