--- a/html/Pulseras.html
+++ b/html/Pulseras.html
@@ -59,7 +59,7 @@
 
         </article>
 
-        <iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe>
+        <!--<iframe class="Enlace-Instagran" src="../html/Instagran-Baul.html" frameborder="0"></iframe> -->
         
         <iframe class="instrucciones-compra" src="../html/instrucciones-compra.html"></iframe>
         
